# DC_Lottery

./: .gitignore  README.md  pyproject.toml
src/: main.py  requirements.txt
src/api/: views.py
src/pages/: views.py
src/static/css/: main.css
src/static/js/: lottery.js  register.js
src/templates/: lottery.html  register.html
src/utils/: database.py  lottery.py
terraform/config/: template.tfvars
terraform/dc_lottery/: main.tf  variables.tf
terraform/dc_lottery/charts/: Chart.yaml  values.yaml
terraform/dc_lottery/charts/templates/: configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
terraform/main/: main.tf  variables.tf
terraform/mysql/: main.tf  output.tf  variables.tf
