[tool.poetry]
name = "dc-lotery"
version = "0.0.1"
description = ""
authors = ["FawenYo <sky80838@gmail.com>"]
readme = "README.md"
packages = [{include = "dc_lottery"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
requests = "^2.28.1"
uvicorn = "^0.20.0"
uvloop = "^0.17.0"
aiofiles = "^22.1.0"
Jinja2 = "^3.1.2"
python-dotenv = "^0.21.0"
pymysql = "^1.0.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
